# thermal_bot

./: README.md
LeptonModule/software/raspberrypi_video/: LeptonThread.cpp  LeptonThread.h  Makefile  MyLabel.cpp  MyLabel.h  main.cpp  package.xml  raspberrypi_video.pro
scripts/: gps_node.cpp  manual_control.cpp  manual_control.service  manual_control.sh
